add new Test with allure