@@ -1,5 +1,20 @@
 plugins {
     id 'java-library'
+    id 'io.qameta.allure' version '2.11.2'
+}
+
+allure {
+    report {
+        version.set("2.19.0")
+    }
+    adapter { // отвечает за появление папочки build/allure-results
+        aspectjWeaver.set(true) //обработка аннотации @Step
+        frameworks {
+            junit5 { //название фреймворка
+                adapterVersion.set("2.19.0") //версия интеграции фреймворка и Allure
+            }
+        }
+    }
 }
 
 repositories {
@@ -9,30 +24,22 @@ repositories {
 compileJava{
     options.encoding = "UTF-8"
 }
+
 compileTestJava{
     options.encoding = 'UTF-8'
 }
-
-/*distributions {
-    applicationDefaultJvmArgs = ["--add-opens",
-                                 "java.base/jdk.internal.misc=ALL-UNNAMED", "-Dio.netty.tryReflectionSetAccessible=true"]
-    mainClassName = 'cl.domain.ServerLauncher'
-    archivesBaseName = 'your-service'
-    version = 'latest'
-    main {
-        baseName = 'your-service'
-    }
-}*/
 
 dependencies {
     testImplementation (
             "com.codeborne:selenide:6.19.1",
             "org.junit.jupiter:junit-jupiter:5.10.0",
             "org.slf4j:slf4j-simple:1.7.29",
-            "com.github.javafaker:javafaker:1.0.2"
+            "com.github.javafaker:javafaker:1.0.2",
+            "org.aspectj:aspectjrt:1.9.9.1",
+            "junit:junit:4.13.1",
+            "io.qameta.allure:allure-selenide:2.25.0"
     )
 }
-
 
 test {
     useJUnitPlatform()
